# urbanopt-des

./: .coverage  .cspell.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: build.yml  ci.yml  pypi_release.yml
tests/: conftest.py  results_experimenting.py  test_geojson.py  test_modelica_results.py  test_urbanopt_des.py  test_urbanopt_des_results.py
tests/data/three_building_5G/three_building_test/: FLXenabler.json  baseline.csv
tests/data/three_building_5G/three_building_test_des_agg/: FLXenabler.json  baseline.csv
urbanopt_des/: analysis_instance.py  cli.py  emissions.py  modelica_results.py  results_base.py  uo_cli_wrapper.py  urbanopt_analysis.py  urbanopt_geojson.py  urbanopt_results.py
urbanopt_des/activity_to_osa/: Gemfile  README.md  uo_building_to_osa.rb  worker_init.sh
urbanopt_des/activity_to_osa/measures/AddMonthlyJSONUtilityData/: README.md
urbanopt_des/activity_to_osa/measures/AddMonthlyUtilityData/: README.md
urbanopt_des/activity_to_osa/measures/CalibrationReports/: README.md
urbanopt_des/activity_to_osa/measures/CalibrationReportsEnhanced/: README.md
urbanopt_des/activity_to_osa/measures/ConstructionLayerZeroMaterialProperties/: README.md
urbanopt_des/activity_to_osa/measures/ElectricBaseboardEfficiencyAndCapacity/: README.md
urbanopt_des/activity_to_osa/measures/ExteriorWallThermalPropertiesMultiplier/: README.md
urbanopt_des/activity_to_osa/measures/ExteriorWallThermalPropertiesPercentChange/: README.md
urbanopt_des/activity_to_osa/measures/FansMultiplier/: README.md
urbanopt_des/activity_to_osa/measures/FansPercentChange/: README.md
urbanopt_des/activity_to_osa/measures/GeneralCalibrationMeasureMultiplier/: README.md
urbanopt_des/activity_to_osa/measures/GeneralCalibrationMeasurePercentChange/: README.md
urbanopt_des/activity_to_osa/measures/HardSizeHvac/: README.md
urbanopt_des/activity_to_osa/measures/RValueOfInsulationForConstructionMultiplier/: README.md
urbanopt_des/activity_to_osa/measures/RValueOfInsulationForConstructionPercentageChange/: README.md
urbanopt_des/activity_to_osa/measures/RoofThermalPropertiesMultiplier/: README.md
urbanopt_des/activity_to_osa/measures/RoofThermalPropertiesPercentChange/: README.md
urbanopt_des/activity_to_osa/measures/TimeseriesObjectiveFunction/: README.md
urbanopt_des/activity_to_osa/measures/TimeseriesPlot/: README.md
urbanopt_des/activity_to_osa/measures/WaterHeaterMixedMultiplier/: README.md
urbanopt_des/emissions/: GHG Metrics Spec DRAFT 11-3-21.docx  other_fuels.csv
urbanopt_des/measures/set_argument_value/: measure.py
urbanopt_des/measures/set_extended_type_argument_value/: measure.py
urbanopt_des/measures/set_parameter_value/: measure.py
urbanopt_des/measures/set_parameter_value_multiplier/: measure.py
(+82 files in other folders)
