[tool.poetry]
name = "urbanopt-des"
version = "0.1.0"
description = ""
authors = ["Nicholas Long <nicholas.long@nrel.gov>"]
readme = "README.md"
packages = [{ include = "urbanopt_des", from = "." }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
geopandas = "^1.0.1"
# release mode
# geojson-modelica-translator = "^0.9.1"
# pre-release mode, use github
geojson-modelica-translator = { git = "https://github.com/urbanopt/geojson-modelica-translator.git", branch = "more-geojson-parsing" }
# dev mode
# geojson-modelica-translator = { path = "../geojson-modelica-translator", develop = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
autopep8 = "~2.0"
coveralls = "~3.3"
mypy = "~1.6"
pytest = "~7.4"
pytest-cov = "~4.1"

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"

# TODO: add in other Ruff configs from CBL or GMT
[tool.ruff]
extend-include = ["*.ipynb"]
