[tool.poetry]
name = "urbanopt-des"
version = "0.1.1"
description = ""
authors = ["Nicholas Long <nicholas.long@nrel.gov>"]
readme = "README.md"
packages = [{ include = "urbanopt_des", from = "." }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
geopandas = "^1.0.1"
cyclopts = "^3.19.0"
# release mode
geojson-modelica-translator = "^0.11.0"
# pre-release mode, use github
# geojson-modelica-translator = { git = "https://github.com/urbanopt/geojson-modelica-translator.git", branch = "develop" }
# dev mode
# geojson-modelica-translator = { path = "../geojson-modelica-translator", develop = true }

[tool.poetry.group.dev.dependencies]
pre-commit = "~=4.0"
mypy = "~1.16"
pytest = "~=8.4"
pytest-cov = "~6.2"
buildingspy = "^5.2.0"

[build-system]
requires = ["poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
des-output = "urbanopt_des.cli:app"
